fixes to focus() from tree view. removed scrollbars from collectionview (when floating doc is out of view).

--- a/src/client/views/collections/CollectionView.scss
+++ b/src/client/views/collections/CollectionView.scss
@@ -9,7 +9,7 @@
     border-radius: inherit;
     width: 100%;
     height: 100%;
-    overflow: auto;
+    overflow: hidden; // bcz: why was this 'auto'?  is it needed?  causes scrollbars for some collection freeform views
 }
 
 #google-tags {
